Adapt previous commit: do not prevent a course creator to link categories that can't contain courses (but do not display them in the course form). Also, mark the invisible categories in grey.

--- a/web/css/classic/main.css
+++ b/web/css/classic/main.css
@@ -212,6 +212,10 @@ table.multiselect td.arrows {
     vertical-align: middle;
 }
 
+table.multiselect option.hidden {
+    color: #777777;
+}
+
 /* Specific fieldset and legend styles */
 #courseSettings fieldset legend, 
 #userSettings fieldset legend  {
